--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -1098,8 +1098,8 @@ gdb1$(EXEEXT): gdb$(EXEEXT)
 # for some machines.
 # But these rules don't do what we want; we want to hack the foo.o: tm.h
 # dependency to do the right thing.
-tm-sun3.h tm-hp300bsd.h tm-altos.h: tm-m68k.h
-tm-hp300hpux.h tm-sun2.h tm-3b1.h: tm-m68k.h
+tm-sun3.h tm-altos.h: tm-m68k.h
+tm-sun2.h tm-3b1.h: tm-m68k.h
 xm-i386-sv32.h: xm-i386.h
 tm-i386gas.h: tm-i386.h
 tm-sun4os4.h: tm-sparc.h
